# RecSys_DSL

./: .gitignore  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements-jukemir.txt  requirements.txt
.github/workflows/: ci.yml  pages.yml
data/: README.md
data/metadata/: metadata.csv  metadata_url.csv
data/metadata/melon_top100_by_genre/: Ballad.csv  Blues.csv  Blues_Overseas.csv  Dance.csv  Electronika.csv  Hiphop.csv  Hiphop_Overseas.csv  Indie.csv  Pop.csv  R&B.csv  Rock.csv  Rock_Overseas.csv
data/mood_labels/: About_Song.csv  song_mood_15features.csv  song_mood_with_descriptions.csv
docs/: index.html  style.css
notebooks/: 01_genre_aggregation.ipynb  02_youtube_url_crawling.ipynb  03_audio_download.ipynb  03b_audio_download_single.ipynb  04_audio_sampling.ipynb  05_bert_text_to_mood.ipynb  06_jukemir_embeddings.ipynb  07_audio_mood_classifier.ipynb
recsys/: __init__.py  config.py  data.py  eval.py  metrics.py  recommend.py  seed.py
scripts/: evaluate.py  recommend_demo.py
src/: SETUP_JUKEMIR.md
tests/: test_eval.py  test_metrics.py  test_recommend.py
