[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recsys-dsl"
version = "0.1.0"
description = "Mood-based music recommendation — DSL 24-1 (text→mood→similarity→playlist)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["recsys"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
